[package]
name = "GKM-CLI"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = "4.5.23"
colored = "2.1.0"
console = "0.15.8"
dialoguer = "0.11.0"
futures = "0.3.31"
indicatif = "0.17.9"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
spinners = "4.1.1"
tabled = "0.17.0"
thiserror = "2.0.5"
tokio = { version = "1.42.0", features = ["full"] }
